Revert "prevent overflow in small screens"
This reverts commit c1fb42885233a392e9f30b659e479cd54cca79f3.

--- a/style.css
+++ b/style.css
@@ -137,12 +137,3 @@ input:hover, button:hover{
 .winner {
     color: red;
 }
-
-@media (max-width: 300px) {
-    header{
-        display: none;
-    }
-    body {
-        align-items: center;
-    }
-}
